[package]
name = "hylaean_path"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib"]

[dependencies]
rand = "0.8"
rayon = "1.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

